--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day.">
 
     <meta name="theme-color" content="#6aaa64" />
+    <link href="images/sheesh.png" rel="icon shortcut" sizes="3232" />
+    <link href="images/sheesh.png" rel="apple-touch-icon" />
 
     <style>
       /* Global Styles & Colors */
