split daily and practice

--- a/practice/index.html
+++ b/practice/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://shwordle.xyz/" />
+    <meta property="og:url" content="https://shwordle.xyz/practice" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Shwordle - A daily word game" />
     <meta
@@ -32,8 +32,8 @@
 
     <meta name="theme-color" content="#6aaa64" />
     <link rel="manifest" href="manifest.json" />
-    <link href="images/sheesh.png" rel="icon shortcut" sizes="3232" />
-    <link href="images/sheesh.png" rel="apple-touch-icon" />
+    <link href="../images/sheesh.png" rel="icon shortcut" sizes="3232" />
+    <link href="../images/sheesh.png" rel="apple-touch-icon" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -153,7 +153,7 @@
         window.shwordle.hash = "shwordle";
       })();
     </script>
-    <script src="main.shwordle.js"></script>
+    <script src="main.shwordle-practice.js"></script>
     <game-app></game-app>
   </body>
 </html>
